<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GBManager</string>
    <string name="action_settings">Settings</string>
    <string name="gbmanager">GBManager</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="btn_login">Login</string>
    <string name="chk_salvar">Lembrar Usuário</string>
    <string name="btn_fechar">Fechar programa</string>
    <string name="btn_limpar">Deletar</string>
    <string name="title_activity_menu">Menu</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu">Menu</string>
    <string name="logo_descricao">Logo da Global</string>
    <string name="novo_cadastro">Novo Cadastro</string>
    <string name="nova_tarefa">Nova Tarefa</string>
    <string name="nova_os">Nova OS</string>
    <string name="monitoramento">Monitoramento</string>
    <string name="configuracao">Configurações</string>
    <string name="sair">Sair</string>
    <string name="title_activity_menu__adm">GBManager</string>
    <string name="title_activity_novaordemservico">GBManager</string>
    <string name="title_novaOrdemDeServico">Nova OS</string>
    <string name="title_activity_cadastro_usuario">GBManager</string>
    <string name="label_cliente">Cliente</string>
    <string name="label_contrato">Contrato</string>
    <string name="label_endereco">Endereço</string>
    <string name="label_descricao">Descrição</string>
    <string name="label_usuario">Usuário</string>
    <string name="spinner1_prompt">Selecione Usuário</string>
    <string name="txt_almoco">Hora do Almoço!</string>
    <string name="tittle_tocarAlarme">Tocar Alarme no Almoço</string>
	<string name="txt_horario">Escolher Horário</string>
	<string name="txt_facebook">Facebook</string>
	<string name="txt_twitter">Twitter</string>
    
    <string-array name="spinner1_entries">
        <item>João</item>
        <item>Maria</item>
    </string-array>

    <string name="label_prazo">Prazo</string>
    <string name="button_enviar">Enviar</string>
    <string name="button_limpar">Deletar</string>
    <string name="title_activity_nova_tarefa">GBManager</string>
    <string name="label_novaTarefa">Nova Tarefa</string>
    <string name="label_descricao2">Descrição</string>
    <string name="label_usuario2">Usuário</string>
    <string name="spinnerTarefa_prompt">Selecione Usuário</string>
    <string name="usuario">Nome do Usuário</string>
    <string name="matricula">Matrícula</string>
    <string name="email">Email</string>
    <string name="funcao">Função</string>
    <string name="senhaCadastro">Senha</string>
    <string name="spinnerInicial">Selecione</string>

    <string-array name="spinnerTarefa_entries">
        <item>Usuário 1</item>
        <item>Usuário 2</item>
        <item>Usuário 3</item>
    </string-array>
    <string-array name="opcoesSpinner">
        <item>Gerente</item>
        <item>Instalador</item>
        <item>Supervisor</item>
    </string-array>

    <string name="atividades_text">Atividades</string>
    <string name="voltar2">Atualizar</string>
    <string name="enviar">Enviar</string>
    <string name="limpar">Deletar</string>
    <string name="title_activity_tarefas">GBManager</string>
    <string name="tarefas">Monitoramento</string>
    <string name="voltar">Atualizar</string>
    <string name="title_activity_minhas_tarefas">GBManager</string>
    <string name="button_limparTarefa">Deletar</string>
    <string name="label_prazoTarefa">Prazo</string>
    <string name="button_enviarTarefa">Enviar</string>
    <string name="label_minhasTarefas">Minhas Tarefas</string>
    <string name="button_iniciarTarefa">Iniciar</string>
    <string name="button_voltar">Voltar</string>
    <string name="title_activity_ordem_de_servico">GBManager</string>
    <string name="spinner1_OS_prompt">Selecione Usuário</string>

    <string-array name="spinner1_OS_entries">
        <item>João</item>
        <item>Maria</item>
    </string-array>

    <string name="title_ordemDeServico">Ordem de Serviço</string>
    <string name="button_iniciarOS">Iniciar</string>
    <string name="button_voltarDeOS">Voltar</string>
    <string name="title_activity_atividades">GBManager</string>
    <string name="title_activity_lista_atividades">ListaAtividades</string>
    <string name="title_activity_edicao_preferencias">EdicaoPreferencias</string>
    <string name="title_activity_alarme">AlarmeActivity</string>

    
    <!-- Preferencias -->
    <string name="title_activity_preferencias">Preferências</string>
    <string name="conf">Configurações</string>
    <string name="about">Sobre o Projeto</string>
    <string name="summary_alarme">Marque se deseja ser informado sobre a hora do almoço</string>
    <string name="summary_hora">Configure seu horário desejado para o alarme</string>
    <string name="idioma">Idioma</string>
    <string name="summary_idioma">Selecione o idioma desejado para a aplicação</string>
    <string name="portugues">Português</string>
    <string name="ingles">Inglês</string>
    <string name="dialogTitle">Selecione o Idioma</string>
    <string name="dialogFonte">Selecione o Tamanho da Fonte</string>
    <string name="fonte">Tamanho da fonte</string>
    <string name="summary_fonte">Tamanho da fonte para a Lista de Monitoramento</string>
    <string name="corFonte">Cor da fonte</string>
    <string name="summary_corFonte">Selecione a cor da fonte para o Menu</string>
    <string name="dialogCFonte">Selecione a Cor da Fonte</string>
    <string name="PfMonitoramento">Preferências do Monitoramento</string>
    <string name="PfGeral">Preferências Gerais</string>
</resources>