<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">    
	
	<CheckBoxPreference 
	    android:key="alarme"
	    android:title="@string/tittle_tocarAlarme"
	    android:summary="@string/summary_alarme"/>
	<com.lp3.gbmanager.PreferenciaTempo
	    android:key="horario_alarme"
	    android:title="@string/txt_horario"
	    android:defaultValue="12:00"
	    android:summary="@string/summary_hora"
	    android:dependency="alarme"/>
	
	<PreferenceCategory
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:key="categoria_geral"
		android:title="@string/PfGeral"
		>
		
		
	<ListPreference 
        android:key="idioma"
        android:title="@string/idioma"
        android:summary="@string/summary_idioma"
      	android:entries="@array/listIdiomas"
      	android:entryValues="@array/opcoesIdiomas"
		android:dialogTitle="@string/dialogTitle"/>
	
	</PreferenceCategory>
	
	<PreferenceCategory
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:key="categoria_mp"
		android:title="@string/PfMonitoramento"
		>
	
	 <ListPreference
        android:key="fonte"
        android:title="@string/fonte"
        android:summary="@string/summary_fonte"
      	android:entries="@array/listFonte"
      	android:entryValues="@array/opcoesFonte"
		android:dialogTitle="@string/dialogFonte"/>
   
   <ListPreference
        android:key="colorf"
        android:title="@string/corFonte"
        android:summary="@string/summary_corFonte"
      	android:entries="@array/listCFonte"
      	android:entryValues="@array/opcoesCFonte"
		android:dialogTitle="@string/dialogCFonte"/>
	
   </PreferenceCategory>
	
</PreferenceScreen>