
<ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/azulclaro"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout 
    
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollY="10dp"
    tools:context=".TelaInicial" >

        <ImageView
            android:id="@+id/imageView1"
            android:paddingTop="10dp"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_descricao"
            android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:text="@string/gbmanager"
        android:textAppearance="?android:attr/textAppearanceLarge" />
	
  

  <LinearLayout
        android:id="@+id/tela_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:typeface="monospace"
            
             >
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senha"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
            android:inputType="textPassword"
            android:typeface="monospace" />
            <!--android:focusable="false" -->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/botoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

       
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:typeface="monospace"
            android:onClick="Click" />
        
    </LinearLayout>
    		
    
    		<CheckBox
            android:id="@+id/chkSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_salvar" 
            android:paddingRight="50dp"
            android:typeface="monospace"
            />
              
    		<Button
            android:id="@+id/button1"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:paddingTop="10dp"
            android:text="@string/btn_fechar" 
            android:onClick="btnFechar_Click"
            android:orientation="vertical" />
            
			
       
       
    
 
   

</LinearLayout>
</ScrollView>