<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/azulclaro"
    android:layout_height="match_parent">

<RelativeLayout 
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NovaOrdemServico" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="240dp"
        android:typeface="monospace"
        android:layout_height="45dp"
        android:layout_alignBaseline="@+id/imageView1"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/imageView1"
        android:gravity="left"
        android:paddingTop="5dp"
        android:text="@string/title_novaOrdemDeServico"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editCliente"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"

        android:layout_below="@+id/textView2" >

        
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editCliente"
        android:typeface="monospace"
        android:layout_alignRight="@+id/textView1"
        android:text="@string/label_contrato" />

    <EditText
        android:id="@+id/editContrato"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editCliente"
        android:layout_alignBottom="@+id/editCliente"
        
        android:layout_alignLeft="@+id/textView3"
        android:ems="10" />

    <EditText
        android:id="@+id/editEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignRight="@+id/editContrato"
        android:layout_below="@+id/textView4"
        
        android:ems="10" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentTop="true"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/editDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignRight="@+id/editEndereco"
        android:layout_below="@+id/textView5"
        
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLines="3"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editCliente"
        android:layout_below="@+id/textView1"
        android:typeface="monospace"
        android:layout_marginTop="14dp"
        android:text="@string/label_cliente" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:layout_alignLeft="@+id/editCliente"
        android:layout_below="@+id/editCliente"
        android:text="@string/label_endereco" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:layout_alignLeft="@+id/editEndereco"
        android:layout_below="@+id/editEndereco"
        android:text="@string/label_descricao" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignRight="@+id/editCliente"
        android:layout_below="@+id/textView6"
        android:entries="@array/spinner1_entries"
        android:prompt="@string/spinner1_prompt" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editDescricao"
        android:layout_below="@+id/editDescricao"
        android:typeface="monospace"
        android:text="@string/label_usuario" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:layout_alignLeft="@+id/editContrato"
        android:layout_below="@+id/editDescricao"
        android:text="@string/label_prazo" />

    <EditText
        android:id="@+id/editPrazo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignRight="@+id/editDescricao"
        android:layout_alignTop="@+id/spinner1"
        android:ems="10"
        
        android:inputType="time" />

    <Button
        android:id="@+id/button_os_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner1"
        android:layout_marginTop="19dp"
        android:layout_toRightOf="@+id/textView5"
        android:text="@string/button_enviar" />

    <Button
        android:id="@+id/button_os_excluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_os_salvar"
        android:layout_alignBottom="@+id/button_os_salvar"
        android:layout_alignLeft="@+id/editPrazo"
        android:text="@string/button_limpar" />

</RelativeLayout>
</ScrollView>
