
   
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/azulclaro"
    android:layout_height="match_parent">


<RelativeLayout 
    android:id="@+id/RelativeLayout1_OS"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".OrdemDeServico"  >

    <TextView
        android:id="@+id/textView1_OS"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_alignBaseline="@+id/imageView1"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginLeft="40dp"
        android:typeface="monospace"
        android:layout_toRightOf="@+id/imageView1"
        android:gravity="left"
        android:paddingTop="5dp"
        android:text="@string/title_ordemDeServico"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText1_OS"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:layout_alignParentLeft="true"
        android:typeface="monospace"
        android:layout_below="@+id/textView2_OS" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3_OS"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText1_OS"
        android:typeface="monospace"
        android:layout_alignRight="@+id/textView1_OS"
        android:text="@string/label_contrato" />

    <EditText
        android:id="@+id/editText2_OS"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText1_OS"
        android:layout_alignBottom="@+id/editText1_OS"
        android:focusable="false"
        android:layout_alignLeft="@+id/textView3_OS"
        android:ems="10" />

    <EditText
        android:id="@+id/editText3_OS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4_OS"
        android:layout_alignRight="@+id/editText2_OS"
        android:focusable="false"
        android:layout_below="@+id/textView4_OS"
        android:ems="10" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/textView2_OS"
        android:layout_alignParentTop="true"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/editText4_OS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5_OS"
        android:focusable="false"
        android:layout_alignRight="@+id/editText3_OS"
        android:layout_below="@+id/textView5_OS"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLines="3"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/textView2_OS"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1_OS"
        android:layout_below="@+id/textView1_OS"
        android:layout_marginTop="14dp"
        android:typeface="monospace"
        android:text="@string/label_cliente" />

    <TextView
        android:id="@+id/textView4_OS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:layout_alignLeft="@+id/editText1_OS"
        android:layout_below="@+id/editText1_OS"
        android:text="@string/label_endereco" />

    <TextView
        android:id="@+id/textView5_OS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3_OS"
        android:layout_below="@+id/editText3_OS"
        android:typeface="monospace"
        android:text="@string/label_descricao" />

    <Spinner
        android:id="@+id/spinner1_OS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6_OS"
        android:layout_alignRight="@+id/editText1_OS"
        android:layout_below="@+id/textView6_OS"
        android:entries="@array/spinner1_OS_entries"
        android:prompt="@string/spinner1_OS_prompt" />

    <TextView
        android:id="@+id/textView6_OS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText4_OS"
        android:layout_below="@+id/editText4_OS"
        android:typeface="monospace"
        android:text="@string/label_usuario" />

    <TextView
        android:id="@+id/textView7_OS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:layout_alignLeft="@+id/editText2_OS"
        android:layout_below="@+id/editText4_OS"
        android:text="@string/label_prazo" />

    <EditText
        android:id="@+id/editText5_OS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7_OS"
        android:layout_alignRight="@+id/editText4_OS"
        android:layout_alignTop="@+id/spinner1_OS"
        android:ems="10"
        android:focusable="false"
        android:inputType="time" />

    <Button
        android:id="@+id/button1_OS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner1_OS"
        android:layout_marginTop="19dp"
        android:layout_toRightOf="@+id/textView5_OS"
        android:text="@string/button_iniciarOS" />

    <Button
        android:id="@+id/button2_OS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1_OS"
        android:layout_alignBottom="@+id/button1_OS"
        android:layout_alignLeft="@+id/editText5_OS"
        android:text="@string/button_voltarDeOS" />

</RelativeLayout>
</ScrollView>


    
